--- a/styles/Login/admindash.module.scss
+++ b/styles/Login/admindash.module.scss
@@ -14,7 +14,5 @@
 }
 .bgcolor{
     min-height: 100vh;
-    background : linear-gradient(to right, #ffffff, #f9f6fb, #f5edf4, #f4e3eb, 
-    #f3d9df, #f2d5d9, #f1d0d3, #efcccc, #eecccc, #eecccc, #edcccc, #eccccc);
-    
+//     background: linear-gradient(to bottom, #852525, #aa596c, #c190ab, #d9c9dc, #ffffff);
 }
