--- a/styles/Login/admindash.module.scss
+++ b/styles/Login/admindash.module.scss
@@ -12,7 +12,7 @@
     margin-left: 20px;
     color:aliceblue;
 }
-.bgcolor{
-    min-height: 100vh;
+// .bgcolor{
+//     min-height: 100vh;
 //     background: linear-gradient(to bottom, #852525, #aa596c, #c190ab, #d9c9dc, #ffffff);
-}
+// }
