--- a/styles/Login/adminreports.module.scss
+++ b/styles/Login/adminreports.module.scss
@@ -1,7 +1,6 @@
 .bgcolor{
     min-height: 100vh;
-    background : linear-gradient(to right, #ffffff, #f9f6fb, #f5edf4, #f4e3eb, 
-    #f3d9df, #f2d5d9, #f1d0d3, #efcccc, #eecccc, #eecccc, #edcccc, #eccccc);
+    background-image: linear-gradient(to top, #852525, #aa596c, #c190ab, #d9c9dc, #ffffff);
 }
 .searchmargin{
     margin-left: 2rem;
