--- a/styles/Login/empreports.module.scss
+++ b/styles/Login/empreports.module.scss
@@ -1,6 +1,6 @@
 .bgcolor{
     min-height: 100vh;
-    background: linear-gradient(to bottom, #852525, #aa596c, #c190ab, #d9c9dc, #ffffff);
+    background: linear-gradient(to top, #852525, #aa596c, #c190ab, #d9c9dc, #ffffff);
 }
 .searchmargin{
     margin-left: 2rem;
