--- a/styles/Login/empreports.module.scss
+++ b/styles/Login/empreports.module.scss
@@ -3,8 +3,7 @@
     background: linear-gradient(to top, #852525, #aa596c, #c190ab, #d9c9dc, #ffffff);
 }
 .searchmargin{
-    margin-left: 2rem;
-    border-radius: 10rem;
+    border-radius: .5rem;
 }
 .listmargin{
     margin-left: 1rem;
