--- a/styles/Login/login.module.scss
+++ b/styles/Login/login.module.scss
@@ -1,6 +1,6 @@
 .gButton{
     margin-top: 30px;
-    position: absolute;
+    margin-right: 50px;
     width: 436px;
     height: 45px;
     left: 250px;
@@ -31,8 +31,8 @@
       font-family: 'Lato';
     }
     .TextField{
-    margin-bottom: 0%;
-    border-radius: 4px;
+    margin-bottom: 1rem;
+    border-radius: 4rem;
     }
     
     .GoogleButton{
