--- a/styles/Login/dashboard.module.scss
+++ b/styles/Login/dashboard.module.scss
@@ -22,7 +22,7 @@
 .goodday{
     align-items: center;
     text-align: center;
-    margin-top: 2rem;
+    margin-top: 1rem;
     font-family: 'Lato', sans-serif;
     font-size: 30px;
 }
@@ -37,7 +37,7 @@
 .time{
     text-align: center;
     align-items: center;
-    margin-top: 3rem;
+    margin-top: 2rem;
     align-items: center;
     text-align: center;
     margin-top: 2rem;
@@ -63,6 +63,19 @@
     height: 50;
     margin-top: 3rem;
     margin-bottom: 5rem;
+}
+
+.tibutton{
+    align-items: center;
+    text-align: center;
+    background-color: black;
+    color:#ffffff;
+    font-size: 20px;
+    width: 300;
+    height: 100;
+    margin-top: 3rem;
+    margin-bottom: 5rem;
+    margin-right: 2rem;
 }
 
 .dbutton{
