--- a/styles/Login/adminreports.module.scss
+++ b/styles/Login/adminreports.module.scss
@@ -19,16 +19,16 @@
 .tablehead{
     background-color: #dad8d8; 
 }
-.sort{
-    color: #852525;
-    background-color: #ffffff;
-    text-transform: capitalize !important;
-    &:hover {
-        color:#852525;
-        background-color: #ffffff;
-        border-color: #ffffff;
-    }
-}
+// .sort{
+//     color: #852525;
+//     background-color: #ffffff;
+//     text-transform: capitalize !important;
+//     &:hover {
+//         color:#852525;
+//         background-color: #ffffff;
+//         border-color: #ffffff;
+//     }
+// }
 
 
 
