--- a/styles/Login/admindash.module.scss
+++ b/styles/Login/admindash.module.scss
@@ -14,5 +14,5 @@
 }
 // .bgcolor{
 //     min-height: 100vh;
-//     background: linear-gradient(to bottom, #852525, #aa596c, #c190ab, #d9c9dc, #ffffff);
+//     background-image: linear-gradient(to top, #5f1a1a, #7e3f3c, #9b6562, #b78b89, #d3b3b2, #e0c7c9, #ecdbde, #f8eff2, #f9f3f6, #faf7fa, #fcfbfd, #ffffff);
 // }
