--- a/styles/Login/header.module.scss
+++ b/styles/Login/header.module.scss
@@ -40,4 +40,7 @@
 .icons{
   color: #852525;
 }
+.bgcolor{
+  background-image: linear-gradient(to top, #852525, #a24b5a, #b7758d, #c79fb9, #d9c9dc, #e3dbe9, #f0edf5, #ffffff, #ffffff, #ffffff, #ffffff, #ffffff);
+}
    
