--- a/styles/Login/dashboard.module.scss
+++ b/styles/Login/dashboard.module.scss
@@ -22,9 +22,10 @@
 .goodday{
     align-items: center;
     text-align: center;
-    margin-top: 2rem;
-    font-family: 'Lato', sans-serif;
-    font-size: 30px;
+    // margin-top: 8rem;
+    font-family: 'LatoBold';
+    font-size: 50px;
+    font-weight: 500;
 }
 .date{
     text-align: center;
@@ -37,21 +38,13 @@
 .time{
     text-align: center;
     align-items: center;
-    margin-top: 3rem;
+    margin-top: 0rem;
     align-items: center;
     text-align: center;
     margin-top: 2rem;
     font-family: 'Lato', sans-serif;
     font-size: 150px;
     color:#852525
-}
-.background{
-    height: 100%;
-    width: 100%;
-    background-image: linear-gradient(to bottom, #ffffff, #f9f6fb,
-     #f5edf4, #f4e3eb, #f3d9df, #f2d5d9, #f1d0d3, #efcccc,
-      #eecccc, #eecccc, #edcccc, #eccccc);
-      background-size: cover;
 }
 .button{
     align-items: center;
@@ -62,11 +55,29 @@
     width: 100;
     height: 50;
     margin-top: 3rem;
-    margin-bottom: 5rem;
-}
+    // margin-bottom: .5rem;
+    margin-right: 2rem;
+    font-family: "LatoLight"
 
+}
+.tibutton{
+    align-items: center;
+    text-align: center;
+    background-color: black;
+    color:#ffffff;
+    font-size: 20px;
+    width: 300;
+    height: 100;
+    margin-top: 3rem;
+    // margin-bottom: .5rem;
+    margin-right: 1rem;
+    font-family: "LatoLight"
+}
 .dbutton{
     align-items: center;
     text-align: center;
 
+}
+.top{
+    margin-top: 8rem;
 }
