--- a/styles/Login/login.module.scss
+++ b/styles/Login/login.module.scss
@@ -31,8 +31,8 @@
       font-family: 'Lato';
     }
     .TextField{
-    margin-bottom: 0%;
-    border-radius: 4px;
+    margin-bottom: 1rem;
+    border-radius: 4rem;
     }
     
     .GoogleButton{
