--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -71,31 +71,30 @@
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
   }
-}
+} */
 
-* {
+/* * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-}
+} */
 
-html,
+/* html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
+} */
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-image: linear-gradient(to bottom, #ffffff, #f9f6fb,
+  #f5edf4, #f4e3eb, #f3d9df, #f2d5d9, #f1d0d3, #efcccc,
+   #eecccc, #eecccc, #edcccc, #eccccc);
+   box-sizing: border-box;
+
+   min-height: 100vh;
 }
 
-a {
+/* a {
   color: inherit;
   text-decoration: none;
 }
@@ -104,4 +103,4 @@ a {
   html {
     color-scheme: dark;
   }
-}
+} */
