--- a/styles/Login/admindash.module.scss
+++ b/styles/Login/admindash.module.scss
@@ -16,7 +16,7 @@
 .text{
     color:#852525;
     font-size: 5rem;
-    font-family: 'LatoLight';
+    font-family: 'Roboto';
 }
 .align{
     align-items: center;
