--- a/styles/Login/dashboard.module.scss
+++ b/styles/Login/dashboard.module.scss
@@ -1,97 +1,90 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Open+Sans:wght@400;500&family=Roboto&display=swap');
 
-.AppBar{
-    background-color: #852525;
-}
-.logo{
+// Regular module classes (not global)
+.logo {
     width: 100px;
     height: 60px;
 }
-.bg{
+
+.bg {
     height: 100%;
     width: 100%;
 }
-.logo{
-    height: 50px;
-    width: 150px;
-    margin-left: 1rem;
-}
-.menuItem{
+
+.menuItem {
     background-color: #852525;
 }
-.goodday{
-    align-items: center;
-    text-align: center;
-    // margin-top: 8rem;
-    font-family: 'Roboto';
-    font-size: 50px;
-    font-weight: 700;
+
+.top {
+    margin-top: 8rem;
 }
-.date{
+
+.date {
     text-align: center;
     align-items: center;
     margin-top: 0rem;
-    color:#852525;
+    color: #852525;
     font-size: 40px;
     font-family: 'Roboto';
-
 }
-.time{
+
+.time {
     text-align: center;
     align-items: center;
-    margin-top: 0rem;
-    align-items: center;
-    text-align: center;
     margin-top: 2rem;
     font-family: 'Lato', sans-serif;
     font-size: 150px;
-    color:#852525
+    color: #852525;
 }
-.button{
+
+.button {
     align-items: center;
     text-align: center;
-    background-color: black;
-    color:#ffffff;
+    background-color: black !important;
+    color: #ffffff !important;
     font-size: 20px;
-    width: 100;
-    height: 50;
+    width: 100px;
+    height: 50px;
     margin-top: 3rem;
-    // margin-bottom: .5rem;
     margin-right: 2rem;
-    font-family: "Roboto"
+    font-family: "Roboto";
+}
 
-}
-.tibutton{
+.dbutton {
+    display: flex;
+    justify-content: center;
     align-items: center;
-    text-align: center;
-    background-color: #000000e1;
-    color:#ffffff;
-    font-size: 20px;
-    width: 180px;
-    height: 100;
-    margin-top: 3rem;
-    // margin-bottom: .5rem;
-    margin-right: 1rem;
-    font-family: "Roboto"
+    gap: 1rem; // Optional: space between buttons
 }
-// .clockinbutton{
-//     align-items: center;
-//     text-align: center;
-//     background-color: #000000e1;
-//     color:#ffffff;
-//     font-size: 20px;
-//     width: 800;
-//     height: 100;
-//     margin-top: 3rem;
-//     // margin-bottom: .5rem;
-//     margin-right: 1rem;
-//     font-family: "Roboto"
-// }
-.dbutton{
-    align-items: center;
-    text-align: center;
 
+// MUI-overwriting classes (global for specificity)
+:global(.MuiAppBar-root) {
+    &.AppBar {
+        background-color: #852525 !important;
+    }
 }
-.top{
-    margin-top: 8rem;
+
+:global(.MuiButton-root) {
+    &.tibutton {
+        align-items: center;
+        text-align: center;
+        background-color: #000000e1 !important;
+        color: #ffffff !important;
+        font-size: 20px;
+        width: 180px;
+        height: 100px;
+        margin-top: 3rem;
+        margin-right: 1rem;
+        font-family: "Roboto";
+    }
+}
+
+:global(.MuiTypography-root) {
+    &.goodday {
+        align-items: center;
+        text-align: center;
+        font-family: 'Roboto';
+        font-size: 50px;
+        font-weight: 700;
+    }
 }
