--- a/styles/Login/header.module.scss
+++ b/styles/Login/header.module.scss
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Open+Sans:wght@400;500&family=Roboto&display=swap');
 
-.AppBar{
-    background-color: #852525;
+:global(.MuiAppBar-root) {
+  &.AppBar {
+    background-color: #852525 !important;
+  }
 }
 .logo{
     width: 100px;
